force-app/main/default/objects/Provisioning_Task__c/Provisioning_Task__c.object-meta.xml
<CustomObject>
    <label>Provisioning Task</label>
    <pluralLabel>Provisioning Tasks</pluralLabel>
    <description
  >A discrete fulfillment task generated by the provisioning process for a Service Order, tracked through to completion by the Provisioning team.</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <label>Provisioning Task Number</label>
        <type>AutoNumber</type>
        <displayFormat>PT-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>