force-app/main/default/objects/Provisioning_Task__c/fields/Assigned_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Queue__c</fullName>
    <label>Assigned Queue</label>
    <type>Text</type>
    <length>80</length>
    <description
  >Name of the operational queue this task is routed to for pickup (e.g. Provisioning).</description>
</CustomField>