force-app/main/default/objects/Provisioning_Task__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <label>Service Order</label>
    <type>Lookup</type>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>Provisioning Tasks</relationshipLabel>
    <relationshipName>Provisioning_Tasks</relationshipName>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
    <description
  >The service order this fulfillment task was generated for.</description>
</CustomField>